refactor:重构be-class统一架构
